--- a/vaultwarden/docker-compose.yml
+++ b/vaultwarden/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     container_name: vaultwarden
     environment:
       - TZ=America/Toronto
-      - WEBSOCKET_ENABLED = true  # Enable WebSocket notifications.
+      - WEBSOCKET_ENABLED=true  # Enable WebSocket notifications.
+      - FILE_ADMIN_TOKEN=./admin_token # Generate using: openssl rand -base64 48
     volumes:
       - ./data:/data
     ports:
