--- a/vaultwarden/vaultwarden.conf
+++ b/vaultwarden/vaultwarden.conf
@@ -5,7 +5,6 @@ server{
 }
 
 server{
-
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
   
@@ -27,18 +26,43 @@ server{
   access_log /var/log/nginx/vaultwarden.access.log;
 
   location / {
+    proxy_pass http://127.0.0.1:8080;
+    proxy_ssl_protocols TLSV1.2 TLSV1.3;
 
-      proxy_pass http://127.0.0.1:8080;
-      proxy_ssl_protocols TLSV1.2 TLSV1.3;
-
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
       
-      add_header Strict-Transport-Security "max-age=100; includeSubDomains" always;
-      #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
+    add_header Strict-Transport-Security "max-age=100; includeSubDomains" always;
+    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
   }
+  
+  location /notifications/hub/negotiate {
+    proxy_pass http://127.0.0.1:8080;
+    proxy_ssl_protocols TLSV1.2 TLSV1.3;
 
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+      
+    add_header Strict-Transport-Security "max-age=100; includeSubDomains" always;
+    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+  }
+  
+  location /notifications/hub {
+    proxy_pass http://127.0.0.1:3012;
+    proxy_ssl_protocols TLSV1.2 TLSV1.3;
+    
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header Forwarded $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+      
+    add_header Strict-Transport-Security "max-age=100; includeSubDomains" always;
+    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+  }
 }
