--- a/vaultwarden/docker-compose.yml
+++ b/vaultwarden/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       #- ROCKET_WORKERS=20 # Numer of threads to handle requests
       # SMTP Configuration | https://github.com/dani-garcia/vaultwarden/wiki/SMTP-Configuration
       #- SMTP_HOST=smtp.gmail.com
+      #- SMTP_FROM=
       #- SMTP_PORT=465
       #- SMTP_SECURITY=force_tls
       #- SMTP_USERNAME=<mail-address>
