--- a/fireflyiii/.env
+++ b/fireflyiii/.env
@@ -12,7 +12,7 @@ SITE_OWNER=mail@example.com
 # The encryption key for your sessions. Keep this very secure.
 # Change it to a string of exactly 32 chars or use something like `php artisan key:generate` to generate it.
 # If you use Docker or similar, you can set this variable from a file by using APP_KEY_FILE
-APP_KEY=SomeRandomStringOf32CharsExactly
+APP_KEY_FILE=/run/secrets/app_key # Generate using: openssl rand -base64 32
 
 # Firefly III will launch using this language (for new users and unauthenticated visitors)
 # For a list of available languages: https://github.com/firefly-iii/firefly-iii/tree/main/resources/lang
@@ -27,11 +27,11 @@ DEFAULT_LOCALE=equal
 # Change this value to your preferred time zone.
 # Example: Europe/Amsterdam
 # For a list of supported time zones, see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-TZ=Europe/Amsterdam
+TZ=America/Toronto
 
 # TRUSTED_PROXIES is a useful variable when using Docker and/or a reverse proxy.
 # Set it to ** and reverse proxies work just fine.
-TRUSTED_PROXIES=
+TRUSTED_PROXIES=**
 
 # The log channel defines where your log entries go to.
 # Several other options exist. You can use 'single' for one big fat error log (not recommended).
