--- a/fireflyiii/docker-compose.yml
+++ b/fireflyiii/docker-compose.yml
@@ -17,19 +17,21 @@ services:
 
   db:
     image: mariadb
+    container_name: fireflydb
     hostname: fireflyiiidb
-    restart: always
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_USER=firefly
-      - MYSQL_PASSWORD=secret_firefly_password
+      - MYSQL_PASSWORD_FILE=/run/secrets/fireflydb_password
       - MYSQL_DATABASE=firefly
     volumes:
-      - firefly_iii_db:/var/lib/mysql
-volumes:
-   firefly_iii_upload:
-   firefly_iii_db:
+      - ./db:/var/lib/mysql
+    secrets:
+      - fireflydb_password
+    restart: unless-stopped
 
 secrets:
   app_key:
     file: ./app_key
+  fireflydb_password:
+    file: ./fireflydb_password
