--- a/flame/plus_nginx/docker-compose.yml
+++ b/flame/plus_nginx/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - PASSWORD_FILE=/run/secrets/password
     volumes:
       - ./data:/app/data
-    ports:
-      - 5005:5005
+    #ports:
+      #- 5005:5005
     secrets:
       - password
     restart: unless-stopped
